--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -2,8 +2,10 @@
 <resources>
     <string name="app_name">Hangman</string>
     <string name="start">Start spill</string>
+    <string name="language">Bytt til engelsk</string>
     <string name="gameplay">Spilleregler</string>
     <string name="topscore">Rekord</string>
     <string name="confirm_button">Prøv Bokstaven</string>
-    <string name="letter_exist">Du har allerede tastet</string>
+    <string name="letter_exist">Allerede tastet inn!</string>
+    <string name="enter_letter">Tast inn en bokstav!</string>
 </resources>
