Implemented stats graph

--- a/app/src/main/res/values-en/strings.xml
+++ b/app/src/main/res/values-en/strings.xml
@@ -13,4 +13,6 @@
     <string name="yes">Yes</string>
     <string name="no">No</string>
     <string name="toplist">Top 5 List</string>
+    <string name="stats">Statistics</string>
+    <string name="resetstats">Reset Statistics</string>
 </resources>
