--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -13,4 +13,6 @@
     <string name="yes">Ja</string>
     <string name="no">Nei</string>
     <string name="toplist">Top 5 Liste</string>
+    <string name="stats">Statistikk</string>
+    <string name="resetstats">Frigjør statistikk</string>
 </resources>
