Implemented back button in Stats & GamePlay Activities Improved layout on landscape

--- a/app/src/main/res/values-en/strings.xml
+++ b/app/src/main/res/values-en/strings.xml
@@ -16,7 +16,7 @@
     <string name="stats">Statistics</string>
     <string name="show_loss">Loss</string>
     <string name="show_win">Win</string>
-    <string name="resetstats">Reset Statistics</string>
+    <string name="resetstats">Reset Stats</string>
     <string name="instructions">
         1. Guess a letter, if it matches the secret word it will be replaced with the dashed line(s)\n
         or else it will be listet as a fault letter in red on the right top corner.\n
